--- a/background.html
+++ b/background.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
  <head>
+ 		<script src="js/lib/mixpanel.js"></script>
     <script src="js/background_scripts/background_helpers.js"></script>
     <script src="js/background_scripts/background.js"></script>
     <script src="js/lib/google_analytics.js"></script>
